fixed: overflow y on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  overflow: hidden;
+  overflow-x: hidden;
   font-family: "Press Start 2P", system-ui;
   font-weight: 400;
   font-style: normal;
